--- a/cv.ipynb
+++ b/cv.ipynb
@@ -164,6 +164,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
+    "import cv2\n",
     "\n",
     "def reduce_resolution_and_convert_to_df(input_folder, output_folder):\n",
     "    # Iterate over all the subfolders in the input folder\n",
@@ -187,16 +189,23 @@
     "            edge_image = cv2.imread(edge_image_path, cv2.IMREAD_GRAYSCALE)\n",
     "            edge_image_small = cv2.resize(edge_image, (0, 0), fx=0.2, fy=0.2)\n",
     "            \n",
-    "            # Convert the edge image to a 0-1 DataFrame\n",
+    "            # Convert the edge image to a 0-1 binary array\n",
     "            edge_image_binary = np.where(edge_image_small < 128, 0, 1)\n",
-    "            df_rows.append(edge_image_binary.flatten())\n",
+    "            \n",
+    "            # Count the number of 1's in the left and right halves of the image\n",
+    "            mid = edge_image_binary.shape[1] // 2\n",
+    "            left_count = np.sum(edge_image_binary[:, :mid])\n",
+    "            right_count = np.sum(edge_image_binary[:, mid:])\n",
+    "            \n",
+    "            # Append the counts to the list of rows\n",
+    "            df_rows.append([left_count, right_count])\n",
     "        \n",
     "        # Create the DataFrame for this subfolder\n",
-    "        df = pd.DataFrame(df_rows)\n",
+    "        df = pd.DataFrame(df_rows, columns=['left_count', 'right_count'])\n",
     "        \n",
     "        # Write the DataFrame to a CSV file in the output folder\n",
     "        output_file = os.path.join(output_subfolder, f\"{subfolder}.csv\")\n",
-    "        df.to_csv(output_file, index=False, header=False)"
+    "        df.to_csv(output_file, index=False, header=True)\n"
    ]
   },
   {
